создан файл style.css

--- a/index.html
+++ b/index.html
@@ -87,6 +87,6 @@
     </section>
 
     <section></section>
-    <footer class="footer center">Все права 111 защищены.</footer>
+    <footer class="footer center">Все права защищены.</footer>
   </body>
 </html>
