Картинки для блока Об играх

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="#aboutgames"><button class="header__button">Поехали!</button></a>
         </div>
       </section>
-      
+
       <section class="scrollbar">
         <div class="scrollbar__text">Викторина</div>
         <svg class="scrollbar__star" xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
@@ -55,33 +55,45 @@
       <div class="game-cards">
           <a class="game-card"  href="#">
               <div class="game-card__image game-card__image_type_1"></div>
+              <div class="game-content">
               <div class="game-card__number">Игра № 1</div>
               <div class="game-card__text">Угадай число</div>
+              </div>
           </a>
           <a class="game-card"  href="#">
               <div class="game-card__image game-card__image_type_2"></div>
+              <div class="game-content">
               <div class="game-card__number">Игра № 2</div>
               <div class="game-card__text">Простая арифметика</div>
+              </div>
           </a>
           <a class="game-card"  href="#">
               <div class="game-card__image game-card__image_type_3"></div>
+              <div class="game-content">
               <div class="game-card__number">Игра № 3</div>
               <div class="game-card__text">Переверни текст</div>
+              </div>
           </a>
           <a class="game-card game-card--top" href="#">
               <div class="game-card__image game-card__image_type_4"></div>
+              <div class="game-content">
               <div class="game-card__number">Игра № 4</div>
-              <div class="game-card__text">Камень, ножницы, бумага</div>   
+              <div class="game-card__text">Камень, ножницы, бумага</div> 
+              </div>  
           </a>
           <a class="game-card"  href="#">
               <div class="game-card__image game-card__image_type_5"></div>
+              <div class="game-content">
               <div class="game-card__number">Игра № 5</div>
               <div class="game-card__text">Простая викторина</div>
+              </div>
           </a>
           <a class="game-card game-card--top" href="#">
               <div class="game-card__image game-card__image_type_6"></div>
+              <div class="game-content">
               <div class="game-card__number">Игра № 6</div>
               <div class="game-card__text">Генератор случайных цветов</div>
+              </div>
           </a>
       </div>
   </section>
