--- a/index.html
+++ b/index.html
@@ -4,102 +4,170 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>minigame</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&amp;display=swap"
-    rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&amp;display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    
-      <section class="header center">
-        <div class="header__container">
+    <section class="header center">
+      <div class="header__container">
         <h1 class="header__heading">Добро пожаловать на мой сайт мини-игр</h1>
-        <p class="header__text"> Тебе предстоит пройти несколько увлекательных игр. Если готов, нажимай <span class="header__text_bold">«Поехали!»</span> и <span class="header__text_bold">приступай.</span>
+        <p class="header__text">
+          Тебе предстоит пройти несколько увлекательных игр. Если готов, нажимай
+          <span class="header__text_bold">«Поехали!»</span> и
+          <span class="header__text_bold">приступай.</span>
         </p>
-        <a href="#aboutgames"><button class="header__button">Поехали!</button></a>
-        </div>
-      </section>
+        <a href="#aboutgames"
+          ><button class="header__button">Поехали!</button></a
+        >
+      </div>
+    </section>
 
-      <section class="scrollbar">
-        <div class="scrollbar__text">Викторина</div>
-        <svg class="scrollbar__star" xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
-            <path d="M18 0L22.8616 13.1384L36 18L22.8616 22.8616L18 36L13.1384 22.8616L0 18L13.1384 13.1384L18 0Z" fill="#202027"/>
-          </svg>
-        <div class="scrollbar__text">Угадай число</div>
-        <svg class="scrollbar__star" xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
-            <path d="M18 0L22.8616 13.1384L36 18L22.8616 22.8616L18 36L13.1384 22.8616L0 18L13.1384 13.1384L18 0Z" fill="#202027"/>
-          </svg>
-        <div class="scrollbar__text">Переверни текст</div>
-        <svg class="scrollbar__star" xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
-            <path d="M18 0L22.8616 13.1384L36 18L22.8616 22.8616L18 36L13.1384 22.8616L0 18L13.1384 13.1384L18 0Z" fill="#202027"/>
-          </svg>
-        <div class="scrollbar__text">Простая арифметика</div>
-        <svg class="scrollbar__star" xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
-            <path d="M18 0L22.8616 13.1384L36 18L22.8616 22.8616L18 36L13.1384 22.8616L0 18L13.1384 13.1384L18 0Z" fill="#202027"/>
-          </svg>
-        <div class="scrollbar__text">Камень, ножницы, бумага</div>
-        <svg class="scrollbar__star" xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
-            <path d="M18 0L22.8616 13.1384L36 18L22.8616 22.8616L18 36L13.1384 22.8616L0 18L13.1384 13.1384L18 0Z" fill="#202027"/>
-          </svg>
-        <div class="scrollbar__text">Генератор случайных цветов</div>
-        <svg class="scrollbar__star" xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
-            <path d="M18 0L22.8616 13.1384L36 18L22.8616 22.8616L18 36L13.1384 22.8616L0 18L13.1384 13.1384L18 0Z" fill="#202027"/>
-          </svg>
+    <section class="scrollbar">
+      <div class="scrollbar__text">Викторина</div>
+      <svg
+        class="scrollbar__star"
+        xmlns="http://www.w3.org/2000/svg"
+        width="36"
+        height="36"
+        viewBox="0 0 36 36"
+        fill="none"
+      >
+        <path
+          d="M18 0L22.8616 13.1384L36 18L22.8616 22.8616L18 36L13.1384 22.8616L0 18L13.1384 13.1384L18 0Z"
+          fill="#202027"
+        />
+      </svg>
+      <div class="scrollbar__text">Угадай число</div>
+      <svg
+        class="scrollbar__star"
+        xmlns="http://www.w3.org/2000/svg"
+        width="36"
+        height="36"
+        viewBox="0 0 36 36"
+        fill="none"
+      >
+        <path
+          d="M18 0L22.8616 13.1384L36 18L22.8616 22.8616L18 36L13.1384 22.8616L0 18L13.1384 13.1384L18 0Z"
+          fill="#202027"
+        />
+      </svg>
+      <div class="scrollbar__text">Переверни текст</div>
+      <svg
+        class="scrollbar__star"
+        xmlns="http://www.w3.org/2000/svg"
+        width="36"
+        height="36"
+        viewBox="0 0 36 36"
+        fill="none"
+      >
+        <path
+          d="M18 0L22.8616 13.1384L36 18L22.8616 22.8616L18 36L13.1384 22.8616L0 18L13.1384 13.1384L18 0Z"
+          fill="#202027"
+        />
+      </svg>
+      <div class="scrollbar__text">Простая арифметика</div>
+      <svg
+        class="scrollbar__star"
+        xmlns="http://www.w3.org/2000/svg"
+        width="36"
+        height="36"
+        viewBox="0 0 36 36"
+        fill="none"
+      >
+        <path
+          d="M18 0L22.8616 13.1384L36 18L22.8616 22.8616L18 36L13.1384 22.8616L0 18L13.1384 13.1384L18 0Z"
+          fill="#202027"
+        />
+      </svg>
+      <div class="scrollbar__text">Камень, ножницы, бумага</div>
+      <svg
+        class="scrollbar__star"
+        xmlns="http://www.w3.org/2000/svg"
+        width="36"
+        height="36"
+        viewBox="0 0 36 36"
+        fill="none"
+      >
+        <path
+          d="M18 0L22.8616 13.1384L36 18L22.8616 22.8616L18 36L13.1384 22.8616L0 18L13.1384 13.1384L18 0Z"
+          fill="#202027"
+        />
+      </svg>
+      <div class="scrollbar__text">Генератор случайных цветов</div>
+      <svg
+        class="scrollbar__star"
+        xmlns="http://www.w3.org/2000/svg"
+        width="36"
+        height="36"
+        viewBox="0 0 36 36"
+        fill="none"
+      >
+        <path
+          d="M18 0L22.8616 13.1384L36 18L22.8616 22.8616L18 36L13.1384 22.8616L0 18L13.1384 13.1384L18 0Z"
+          fill="#202027"
+        />
+      </svg>
     </section>
 
     <section class="games__container center">
       <h2 class="games" id="aboutgames">Об играх</h2>
-      <p class="games__text">В моей коллекции представлено 6 игр на разные темы. <br>
-      Игры несложные — в них может поиграть каждый. <br>
-      Все игры доступны для пользования.</p>
+      <p class="games__text">
+        В моей коллекции представлено 6 игр на разные темы. <br />
+        Игры несложные — в них может поиграть каждый. <br />
+        Все игры доступны для пользования.
+      </p>
       <div class="game-cards">
-          <a class="game-card"  href="#">
-              <div class="game-card__image game-card__image_type_1"></div>
-              <div class="game-content">
-              <div class="game-card__number">Игра № 1</div>
-              <div class="game-card__text">Угадай число</div>
-              </div>
-          </a>
-          <a class="game-card"  href="#">
-              <div class="game-card__image game-card__image_type_2"></div>
-              <div class="game-content">
-              <div class="game-card__number">Игра № 2</div>
-              <div class="game-card__text">Простая арифметика</div>
-              </div>
-          </a>
-          <a class="game-card"  href="#">
-              <div class="game-card__image game-card__image_type_3"></div>
-              <div class="game-content">
-              <div class="game-card__number">Игра № 3</div>
-              <div class="game-card__text">Переверни текст</div>
-              </div>
-          </a>
-          <a class="game-card game-card--top" href="#">
-              <div class="game-card__image game-card__image_type_4"></div>
-              <div class="game-content">
-              <div class="game-card__number">Игра № 4</div>
-              <div class="game-card__text">Камень, ножницы, бумага</div> 
-              </div>  
-          </a>
-          <a class="game-card"  href="#">
-              <div class="game-card__image game-card__image_type_5"></div>
-              <div class="game-content">
-              <div class="game-card__number">Игра № 5</div>
-              <div class="game-card__text">Простая викторина</div>
-              </div>
-          </a>
-          <a class="game-card game-card--top" href="#">
-              <div class="game-card__image game-card__image_type_6"></div>
-              <div class="game-content">
-              <div class="game-card__number">Игра № 6</div>
-              <div class="game-card__text">Генератор случайных цветов</div>
-              </div>
-          </a>
+        <a class="game-card" href="#">
+          <div class="game-card__image game-card__image_type_1"></div>
+          <div class="game-content">
+            <div class="game-card__number">Игра № 1</div>
+            <div class="game-card__text">Угадай число</div>
+          </div>
+        </a>
+        <a class="game-card" href="#">
+          <div class="game-card__image game-card__image_type_2"></div>
+          <div class="game-content">
+            <div class="game-card__number">Игра № 2</div>
+            <div class="game-card__text">Простая арифметика</div>
+          </div>
+        </a>
+        <a class="game-card" href="#">
+          <div class="game-card__image game-card__image_type_3"></div>
+          <div class="game-content">
+            <div class="game-card__number">Игра № 3</div>
+            <div class="game-card__text">Переверни текст</div>
+          </div>
+        </a>
+        <a class="game-card game-card--top" href="#">
+          <div class="game-card__image game-card__image_type_4"></div>
+          <div class="game-content">
+            <div class="game-card__number">Игра № 4</div>
+            <div class="game-card__text">Камень, ножницы, бумага</div>
+          </div>
+        </a>
+        <a class="game-card" href="#">
+          <div class="game-card__image game-card__image_type_5"></div>
+          <div class="game-content">
+            <div class="game-card__number">Игра № 5</div>
+            <div class="game-card__text">Простая викторина</div>
+          </div>
+        </a>
+        <a class="game-card game-card--top" href="#">
+          <div class="game-card__image game-card__image_type_6"></div>
+          <div class="game-content">
+            <div class="game-card__number">Игра № 6</div>
+            <div class="game-card__text">Генератор случайных цветов</div>
+          </div>
+        </a>
       </div>
-  </section>
+    </section>
 
     <section>
-    <footer class="footer center">Все права защищены.</footer>
-  </section>
+      <footer class="footer center">Все права защищены.</footer>
+    </section>
   </body>
 </html>
