--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>minigame</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&amp;display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
+      rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <section class="header center">
@@ -20,9 +19,8 @@
           <span class="header__text_bold">«Поехали!»</span> и
           <span class="header__text_bold">приступай.</span>
         </p>
-        <a href="#aboutgames"
-          ><button class="header__button">Поехали!</button></a
-        >
+        <a href="#aboutgames"><button class="header__button">Поехали!</button>
+        </a>
       </div>
     </section>
 
@@ -116,8 +114,8 @@
     <section class="games__container center">
       <h2 class="games" id="aboutgames">Об играх</h2>
       <p class="games__text">
-        В моей коллекции представлено 6 игр на разные темы. <br />
-        Игры несложные — в них может поиграть каждый. <br />
+        В моей коллекции представлено 6 игр на разные темы. <br>
+        Игры несложные — в них может поиграть каждый. <br>
         Все игры доступны для пользования.
       </p>
       <div class="game-cards">
@@ -146,7 +144,7 @@
           <div class="game-card__image game-card__image_type_4"></div>
           <div class="game-content">
             <div class="game-card__number">Игра № 4</div>
-            <div class="game-card__text">Камень, ножницы, бумага</div>
+            <div class="game-card__text">Камень, ножницы,  бумага</div>
           </div>
         </a>
         <a class="game-card" href="#">
