--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <h1 class="header__heading">Добро пожаловать на мой сайт мини-игр</h1>
         <p class="header__text">
           Тебе предстоит пройти несколько увлекательных игр. Если готов, нажимай
-          <span class="header__text_bold">«Поехали!»</span> и
-          <span class="header__text_bold">приступай.</span>
+          <span class="header__text header__text_bold">«Поехали!»</span> и
+          <span class="header__text header__text_bold">приступай.</span>
         </p>
-        <a href="#aboutgames"><button class="header__button">Поехали!</button>
-        </a>
+        <a class="header__button" href="#aboutgames">Поехали!</a>
+        
       </div>
     </section>
 
