--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <h1 class="header__heading">Добро пожаловать на мой сайт мини-игр</h1>
         <p class="header__text">
           Тебе предстоит пройти несколько увлекательных игр. Если готов, нажимай
-          <span class="header__text header__text_bold">«Поехали!»</span> и
-          <span class="header__text header__text_bold">приступай.</span>
+          <span class="header__text-bold">«Поехали!»</span> и
+          <span class="header__text-bold">приступай.</span>
         </p>
         <a class="header__button" href="#aboutgames">Поехали!</a>
-        
       </div>
     </section>
 
+    <marquee class="scrol">
     <section class="scrollbar">
       <div class="scrollbar__text">Викторина</div>
       <svg
@@ -110,10 +110,11 @@
         />
       </svg>
     </section>
+  </marquee>
 
-    <section class="games__container center">
+    <section class="games-container center">
       <h2 class="games" id="aboutgames">Об играх</h2>
-      <p class="games__text">
+      <p class="games-text">
         В моей коллекции представлено 6 игр на разные темы. <br>
         Игры несложные — в них может поиграть каждый. <br>
         Все игры доступны для пользования.
@@ -144,7 +145,7 @@
           <div class="game-card__image game-card__image_type_4"></div>
           <div class="game-content">
             <div class="game-card__number">Игра № 4</div>
-            <div class="game-card__text">Камень, ножницы,  бумага</div>
+            <div class="game-card__text">Камень, ножницы, <br> бумага</div>
           </div>
         </a>
         <a class="game-card" href="#">
@@ -164,8 +165,6 @@
       </div>
     </section>
 
-    <section>
       <footer class="footer center">Все права защищены.</footer>
-    </section>
   </body>
 </html>
