--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       </div>
     </section>
 
-    <marquee class="scrol">
+<marquee class="scrol">   
     <section class="scrollbar">
-      <div class="scrollbar__text">Викторина</div>
+      <p class="scrollbar__text">Викторина</p>
       <svg
         class="scrollbar__star"
         xmlns="http://www.w3.org/2000/svg"
@@ -39,7 +39,7 @@
           fill="#202027"
         />
       </svg>
-      <div class="scrollbar__text">Угадай число</div>
+      <p class="scrollbar__text">Угадай число</p>
       <svg
         class="scrollbar__star"
         xmlns="http://www.w3.org/2000/svg"
@@ -53,7 +53,7 @@
           fill="#202027"
         />
       </svg>
-      <div class="scrollbar__text">Переверни текст</div>
+      <p class="scrollbar__text">Переверни текст</p>
       <svg
         class="scrollbar__star"
         xmlns="http://www.w3.org/2000/svg"
@@ -67,7 +67,7 @@
           fill="#202027"
         />
       </svg>
-      <div class="scrollbar__text">Простая арифметика</div>
+      <p class="scrollbar__text">Простая арифметика</p>
       <svg
         class="scrollbar__star"
         xmlns="http://www.w3.org/2000/svg"
@@ -81,7 +81,7 @@
           fill="#202027"
         />
       </svg>
-      <div class="scrollbar__text">Камень, ножницы, бумага</div>
+      <p class="scrollbar__text">Камень, ножницы, бумага</p>
       <svg
         class="scrollbar__star"
         xmlns="http://www.w3.org/2000/svg"
@@ -95,7 +95,7 @@
           fill="#202027"
         />
       </svg>
-      <div class="scrollbar__text">Генератор случайных цветов</div>
+      <p class="scrollbar__text">Генератор случайных цветов</p>
       <svg
         class="scrollbar__star"
         xmlns="http://www.w3.org/2000/svg"
