--- a/index.html
+++ b/index.html
@@ -166,6 +166,6 @@
     </section>
 
       <footer class="footer center">Все права защищены.</footer>
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
     </body>
 </html>
