--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <section class="header center">
       <div class="header__container">
-        <h1 class="header__heading">Добро пожаловать на мой сайт мини-игр</h1>
+        <h1 class="header__heading">Добро пожаловать <br> на мой сайт мини-игр</h1>
         <p class="header__text">
           Тебе предстоит пройти несколько увлекательных игр. Если готов, нажимай
           <span class="header__text-bold">«Поехали!»</span> и
@@ -137,28 +137,28 @@
         <a class="game-card" href="#flipTheText">
           <div class="game-card__image game-card__image_type_3"></div>
           <div class="game-content">
-            <div class="game-card__number">Игра № 3</div>
+            <div class="game-card__number">Игра №3</div>
             <div class="game-card__text">Переверни текст</div>
           </div>
         </a>
         <a class="game-card game-card--top" href="#rockPaperScissors">
           <div class="game-card__image game-card__image_type_4"></div>
           <div class="game-content">
-            <div class="game-card__number">Игра № 4</div>
+            <div class="game-card__number">Игра №4</div>
             <div class="game-card__text">Камень, ножницы, <br> бумага</div>
           </div>
         </a>
         <a class="game-card" href="#quiz">
           <div class="game-card__image game-card__image_type_5"></div>
           <div class="game-content">
-            <div class="game-card__number">Игра № 5</div>
+            <div class="game-card__number">Игра №5</div>
             <div class="game-card__text">Простая викторина</div>
           </div>
         </a>
         <a class="game-card game-card--top" href="#randomColorGenerator">
           <div class="game-card__image game-card__image_type_6"></div>
           <div class="game-content">
-            <div class="game-card__number">Игра № 6</div>
+            <div class="game-card__number">Игра №6</div>
             <div class="game-card__text">Генератор случайных цветов</div>
           </div>
         </a>
@@ -188,29 +188,30 @@
             <div class="minigame-block" id="flipTheText"> <!--№3-->
         <div class="left-side">
           <h3 class="minigame-name">Переверни текст</h3>
-          <p class="minigame-text">Попробуй ввести текст, который будет перевернут.</p>
+          <p class="minigame-text">Попробуй ввести текст, который<br>будет перевернут.</p>
           <a href="#game1" class="minigame-button">Играть!</a>
         </div>
         <div class="right-side right-minig3"></div>
       </div>
     
-      <div class="minigame-block reversed" id="quiz"> <!--№5-->
+                  <div class="minigame-block reversed" id="rockPaperScissors"> <!--№4-->
         <div class="left-side">
-          <h3 class="minigame-name">Викторина</h3>
-          <p class="minigame-text">Отвечай на вопросы викторины с вариантами ответов.</p>
+          <h3 class="minigame-name">Камень,<br> ножницы,<br> бумага</h3>
+          <p class="minigame-text">Сыграй в популярную игру <br> против компьютера.</p>
           <a href="#game1" class="minigame-button">Играть!</a>
         </div>
         <div class="right-side right-minig4"></div>
       </div>
 
-            <div class="minigame-block" id="rockPaperScissors"> <!--№4-->
+      <div class="minigame-block" id="quiz"> <!--№5-->
         <div class="left-side">
-          <h3 class="minigame-name">Камень,<br> ножницы,<br> бумага</h3>
-          <p class="minigame-text">Сыграй в популярную игру <br> против компьютера.<br>число от 1 до 100.</p>
+          <h3 class="minigame-name">Простая викторина</h3>
+          <p class="minigame-text">Отвечай на вопросы викторины<br>с вариантами ответов.</p>
           <a href="#game1" class="minigame-button">Играть!</a>
         </div>
         <div class="right-side right-minig5"></div>
       </div>
+
     
       <div class="minigame-block reversed" id="randomColorGenerator"> <!--№6-->
         <div class="left-side">
@@ -226,6 +227,6 @@
 
       <footer class="footer center">Все права защищены.</footer>
   <!-- <script src="script.js"></script> -->
-  <script src="hw-3.js"></script>
+  <!-- <script src="hw-3.js"></script> -->
     </body>
 </html>
