--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
       <footer class="footer center">Все права защищены.</footer>
   <!-- <script src="script.js"></script> -->
   <!-- <script src="hw-3.js"></script> -->
-   <script src="hw-4.js"></script>
+  <!-- <script src="hw-4.js"></script> -->
+  <script src="hw-5.js"></script>
     </body>
 </html>
