Сделана игра "Угадай число" - дз 5 на проверку

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div class="left-side">
           <h3 class="minigame-name">Угадай число</h3> 
           <p class="minigame-text">Попробуй угадать случайное<br>число от 1 до 100.</p>
-          <a href="#game1" class="minigame-button">Играть!</a>
+          <a href="#game1" class="minigame-button" onclick="guessTheNumber()">Играть!</a>
         </div>
         <div class="right-side right-minig1"></div>
       </div>
@@ -229,6 +229,8 @@
   <!-- <script src="script.js"></script> -->
   <!-- <script src="hw-3.js"></script> -->
   <!-- <script src="hw-4.js"></script> -->
-  <script src="hw-5.js"></script>
-    </body>
+<script src="games.js"></script>
+<script src="hw-5.js"></script>
+
+</body>
 </html>
