Выполнены задания по JS Массивы

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div class="left-side">
           <h3 class="minigame-name">Простая арифметика</h3>
           <p class="minigame-text">Попробуй решить простые арифметические задачи.</p>
-          <a href="#game1" class="minigame-button">Играть!</a>
+          <a href="#game2" class="minigame-button" onclick="simpleArithmetic()">Играть!</a>
         </div>
         <div class="right-side right-minig2"></div>
       </div>
@@ -230,7 +230,8 @@
   <!-- <script src="hw-3.js"></script> -->
   <!-- <script src="hw-4.js"></script> -->
 <script src="games.js"></script>
-<script src="hw-5.js"></script>
+<!-- <script src="hw-5.js"></script> -->
+<script src="hw-6.js"></script>
 
 </body>
 </html>
